[package]
name = "discord-md"
version = "1.0.0"
edition = "2018"
description = "Parser and generator for Discord's markdown"
repository = "https://github.com/ciffelia/discord-md"
license = "MIT OR Apache-2.0"
keywords = ["discord", "markdown", "parser", "generator"]
categories = ["parser-implementations"]
exclude = ["/.github", "/.gitignore"]

[dependencies]
nom = "7"
derive_more = "0.99"
